test/fail_compilation/fail6572.d
// REQUIRED_ARGS: -de
/*
TEST_OUTPUT:
---
fail_compilation/fail6572.d(9): Deprecation: use of typedef is deprecated; use alias instead
---
*/

typedef int y;
